--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,8 @@ Metrics/MethodLength:
     - "app/controllers/*"
     - "app/models/*"
   Max: 20
+  Metrics/LineLength:
+  Max: 100
 Metrics/AbcSize:
   Include:
     - "app/controllers/*"
