--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -4,6 +4,11 @@
     "rules": {
       "at-rule-no-unknown": null,
       "scss/at-rule-no-unknown": true,
+      "indent": [
+        true,
+        "spaces",
+        4
+    ],
       "csstree/validator": true
     },
     "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css", "**/*.js", "**/*.jsx"]
